jerry-core/parser/js/new-parser/tests/js/lexer/regexp-newline.js
/* This test contains regexp literal parser tests. */

/[\]/]\//; /[/]\
/
